package utm;

/**
 * Interface that represents a general head movement.
 * @author Damian Arellanes
 */
public interface Move {}


